samples/out1.txt

--------------------------Compiling--------------------------
Compilation successful

-------------------Generating Class Files-------------------
Generated: Fptr.class
Generated: List.class
Generated: Order.class
Generated: ProductCatalog.class
Main.j:44: Warning - Syntax error.

^
Main.j:45: JAS Error: Missing arguments for instruction invokespecial.
		d
		 ^
Main.j: Found 2 errors

---------------------------Output---------------------------
Error: Could not find or load main class Main
Caused by: java.lang.ClassNotFoundException: Main
